GARPDev-salesforce/eclipse/GARPDev/src/objects/Milestone1_Expense__c.object
<CustomObject>
    <description>Force.com Labs - PM - The expense object captures monetary expenses for a milestone task.</description>
    <fields>
        <fullName>Amount__c</fullName>
        <inlineHelpText>The amount of the expense.</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_Incurred__c</fullName>
        <inlineHelpText>The date the expense was charged. Defaults to today if left blank.</inlineHelpText>
        <label>Date Incurred</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>A description about the expense. For example, why was the expense incurred.</inlineHelpText>
        <label>Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incurred_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The user who charged the expense. Defaults to current user if left blank.</inlineHelpText>
        <label>Incurred By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Expenses_Incurred</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Task__c</fullName>
        <inlineHelpText>The task to charge the expense against.</inlineHelpText>
        <label>Project Task</label>
        <referenceTo>Milestone1_Task__c</referenceTo>
        <relationshipLabel>Expenses</relationshipLabel>
        <relationshipName>Project_Expenses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Expense</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PEXP-{0000}</displayFormat>
        <label>Project Expense Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>